Fix z-index error for cell editor on last column

--- a/styles/ag-grid.less
+++ b/styles/ag-grid.less
@@ -93,7 +93,7 @@
   	outline: 0;
   	&-focus {
   		overflow: visible;
-  		z-index: 3;
+  		z-index: 10;
   	}
 	}
 	&-popup-editor {
