--- a/styles/table-view-cell-editor.less
+++ b/styles/table-view-cell-editor.less
@@ -1,6 +1,5 @@
 .table-view-cell-editor {
   position: absolute;
-  z-index: 1000;
   display: flex;
   justify-content: center;
   align-items: center;
